Sat Apr 19 10:54:21 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/FooTest5/subscriber.cpp:

          Fixed compile error.

Fri Apr 18 21:07:18 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * bin/dcps_tests.lst:

          Removed transport debug level (it screws up the test matrix).

        * tests/DCPS/Priority/run_test.pl:

          defaulting transport debug to 2.

        * tests/DCPS/FooTest5/run_test.pl:

          Adding setting ACE_LOG_TIMESTAMP to improve diagnostics.

        * tests/DCPS/FooTest5/subscriber.cpp:

          Improving log message.

Fri Apr 18 18:20:08 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * bin/dcps_tests.lst:

          Adding transport debug level for Priority test to identify error
          where not enough space can be allocated.

Fri Apr 18 14:45:30 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/Priority/transport.ini:
        * tests/DCPS/Priority/transport_solaris.ini:

          Removed setting scheduler parameters.

Fri Apr 18 12:41:40 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/Messenger/publisher.cpp:
        * tests/DCPS/Messenger/subscriber.cpp:

          Moved call to TheServiceParticipant->shutdown() to occur before applicable
          vars go out of scope.

Thu Apr 17 18:46:52 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * tests/DCPS/Priority/publisher_main.cpp:

          Removed testing scheduler in this test.

Thu Apr 17 16:53:23 UTC 2014  Brian Johnson  <johnsonb@ociweb.com>

        * bin/dcps_tests.lst:

          Added back in Priority tests.

        * tests/DCPS/Priority/DataReaderListener.cpp:

          Increased sleeping to definitely cause back pressure on all builds.

        * tests/DCPS/Priority/publisher_main.cpp:

          Temporarily removed check for scheduler.

        * tests/DCPS/Priority/Publisher.cpp:

          Increased the number of instance samples to prevent low priority samples